# web-command

./: .flake.nix.kate-swp  .gitignore  Cargo.nix  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  example.sites.toml  flake.nix  module.nix  sites.json  sites.toml  wsh.service
.github/workflows/: build-release.yml
src/: config.rs  http.rs  lib.rs  main.rs  simple_server.rs
