[package]
name = "wsh"
version = "0.2.0"
edition = "2021"

[dependencies]
toml = "0.5.9"
serde = "1.0.144"
serde_derive = "1.0.147"
urlencoding = "2.1.2"
thhp = "0.2.0"
reqwest = { version = "0.11.14", features = ["blocking"] }
http-bytes = "0.1.0"
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["cargo"] }
